# dtkio

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
.reuse/: dep5
debian/: changelog  control  libdtkburn-dev.install  libdtkburn.install  libdtkcompressor-dev.install  libdtkcompressor.install  libdtkio-dev.install  libdtkio.install  libdtkmount-dev.install  libdtkmount.install  libdtksearch-dev.install  libdtksearch.install
docs/dtkburn/: dopticaldiscinfo.zh_CN.dox  dopticaldiscmanager.zh_CN.dox  dopticaldiscoperator.zh_CN.dox  dtkburn_global.zh_CN.dox  dtkburntypes.zh_CN.dox  index.zh_CN.md
docs/dtkcompressor/: darchivemanager.zh_CN.dox  index.zh_CN.md
docs/dtkio/: denumerator.zh_CN.dox  dfile.zh_CN.dox  dfileerror.zh_CN.dox  dfilefuture.zh_CN.dox  dfileinfo.zh_CN.dox  dfilemonitor.zh_CN.dox  dfileoperator.zh_CN.dox  dtkiotypes.zh_CN.dox  index.zh_CN.md
docs/dtkmount/: dblockdevice.zh_CN.dox  dblockdevicemonitor.zh_CN.dox  dblockpartition.zh_CN.dox  ddevicemanager.zh_CN.dox  ddiskdrive.zh_CN.dox  dprotocoldevicemonitor.zh_CN.dox  index.zh_CN.md
docs/dtksearch/: index.zh_CN.md
doxygentheme/: header.html
dtkburn/: CMakeLists.txt  test-recoverage.sh
dtkburn/docs/: CMakeLists.txt
dtkburn/include/: DOpticalDiscManager  demo.h  dopticaldiscinfo.h  dopticaldiscoperator.h  namespace.h
dtkburn/src/: CMakeLists.txt  demo.cpp  dopticaldiscinfo.cpp  dopticaldiscinfo_p.h  dopticaldiscmanager.cpp  dopticaldiscoperator.cpp
dtkburn/src/dbus/: ddemointerface.cpp
dtkburn/tests/: CMakeLists.txt  ut_demo.cpp
dtkburn/tests/dbus/: dfakeinterface.cpp  dfakeinterface.h
dtkcompressor/: CMakeLists.txt  test-recoverage.sh
dtkcompressor/docs/: CMakeLists.txt
dtkcompressor/examples/: CMakeLists.txt  compressortest.cpp  compressortest.h  main.cpp
dtkcompressor/include/: demo.h
dtkcompressor/src/: CMakeLists.txt  demo.cpp
dtkcompressor/src/archivemanager/: darchivemanager.cpp  darchivemanager_p.h  singlejob.h  uitools.cpp  uitools.h
dtkcompressor/tests/: CMakeLists.txt  main.cpp  ut_demo.cpp
dtkcompressor/tests/test_src/: CMakeLists.txt
dtkio/: CMakeLists.txt
dtkio/docs/: CMakeLists.txt
dtkio/include/: DFileWatcher  denumerator.h  dfile.h  dfileinfo.h  dfilemonitor.h  dfileoperator.h  dfilewatcher.h  dtkio_global.h  dtkiotypes.h  namespace.h
dtkio/src/: CMakeLists.txt  demo.cpp  denumerator.cpp  denumerator_p.h  dfile.cpp  dfile_p.h  dfilefuture.cpp  dfilefuture_p.h  dfilehelper.cpp  dfilehelper.h  dfileinfo.cpp  dfileinfo_p.h  dfilemonitor.cpp  dfilemonitor_p.h  dfileoperator.cpp  dfileoperator_p.h  dfilewatcher.cpp  dfilewatcher_p.h
dtkio/tests/: CMakeLists.txt  main.cpp
dtkmount/: CMakeLists.txt  test-recoverage.sh
dtkmount/docs/: CMakeLists.txt  dblockdevice.zh_CN.dox  dblockdevicemonitor.zh_CN.dox  dblockpartition.zh_CN.dox  ddevicemanager.zh_CN.dox  ddiskdrive.zh_CN.dox  ddiskjob.zh_CN.dox  dmounttypes.zh_CN.dox  dprotocoldevice.zh_CN.dox  dprotocoldevicemonitor.zh_CN.dox  dtkmount_global.zh_CN.dox  dudisksjob.zh_CN.dox
dtkmount/examples/device_monitor/: CMakeLists.txt
dtkmount/examples/device_monitor/include/: itemdelegate.h  sortproxy.h
dtkmount/examples/device_monitor/translations/: device_monitor_en_US.ts
dtkmount/include/: DBlockDevice  DBlockDeviceMonitor  DBlockPartition  DDeviceManager  DDiskDrive  DDiskJob  DMountTypes  DProtocolDevice  DProtocolDeviceMonitor  DtkMountGlobal  dblockdevice.h  dblockdevicemonitor.h  dblockpartition.h  ddevicemanager.h  ddiskdrive.h  ddiskjob.h  dmounttypes.h  dprotocoldevice.h  dprotocoldevicemonitor.h  dudisksjob.h
dtkmount/src/: CMakeLists.txt  dblockdevice.cpp  dblockdevice_p.h  dblockdevicemonitor.cpp  dblockdevicemonitor_p.h  dblockpartition.cpp  dblockpartition_p.h  ddevicemanager.cpp  ddiskdrive.cpp  ddiskdrive_p.h  ddiskjob.cpp  ddiskjob_p.h  dprotocoldevice.cpp  dprotocoldevice_p.h  dprotocoldevicemonitor.cpp  dprotocoldevicemonitor_p.h  dudisksjob.cpp  dudisksjob_p.h  utils.cpp  utils.h
dtkmount/src/dbus/: udisks2_dbus_common.h
dtkmount/tests/: CMakeLists.txt  main.cpp  ut_ddevicemanager.cpp
dtksearch/: CMakeLists.txt  test-recoverage.sh
dtksearch/docs/: CMakeLists.txt  dsearch.zh_CN.dox  dtksearch_global.zh_CN.dox  dtksearch_types.zh_CN.dox
dtksearch/include/: demo.h  namespace.h
dtksearch/src/: CMakeLists.txt  demo.cpp  dsearch_p.h
dtksearch/src/dbus/: ddbusinterface.cpp
dtksearch/tests/: CMakeLists.txt  ut_ddemoinnterface.cpp  ut_demo.cpp
examples/: CMakeLists.txt
examples/dtkburn/burn_client/: CMakeLists.txt  burn_client
examples/dtkcompressor/dtkcompressor/: CMakeLists.txt
examples/dtkio/io_client/: CMakeLists.txt  main.cpp
examples/dtkmount/device_monitor/: .gitignore  CMakeLists.txt
examples/dtkmount/device_monitor/include/: window.h
examples/dtkmount/device_monitor/src/: window.cpp
examples/dtkmount/device_monitor/translations/: device_monitor_zh_CN.ts
examples/dtksearch/search_client/: CMakeLists.txt
include/: demo.h
include/dtkio/: dfile.h  dfileerror.h  dfilefuture.h  dfileinfo.h  dfilemonitor.h
include/dtkmount/: dblockpartition.h
include/dtksearch/: dsearch.h  dtksearchtypes.h
src/dtkburn/: dopticaldiscoperator.cpp  dopticaldiscoperator_p.h
src/dtkcompressor/: CMakeLists.txt
src/dtkcompressor/archivemanager/: processopenthread.cpp  processopenthread.h
src/dtkio/: denumerator.cpp  dfile.cpp  dfile_p.h  dfilefuture.cpp  dfilefuture_p.h  dfilehelper.cpp  dfileinfo.cpp  dfileinfo_p.h  dfilemonitor.cpp  dfileoperator.cpp
src/dtkmount/: CMakeLists.txt  ddevicemanager.cpp
src/dtkmount/dbus/: udisks2_dbus_common.cpp
src/dtksearch/: CMakeLists.txt  dsearch.cpp
src/dtksearch/maincontroller/: maincontroller.cpp
src/dtksearch/searcher/anything/: anythingsearcher.h
src/dtksearch/searcher/fulltext/: fulltextsearcher.cpp  fulltextsearcher.h
src/dtksearch/searcher/iterator/: iteratorsearcher.cpp  (+1 more)
tests/: CMakeLists.txt  ut-demo.cpp
tests/dtkburn/: CMakeLists.txt
tests/dtkcompressor/: CMakeLists.txt
tests/dtkio/: CMakeLists.txt  ut_dfile.cpp
tests/dtkmount/: CMakeLists.txt
tests/dtksearch/: CMakeLists.txt
